--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                         <div class="home_text2">
                             <div class="boxlinkedin">
                                 <img src="assets/linkedin.png" width="20px" alt="Logo linkedin">
-                                <a class="linkedin" href="#">Linkedin</a>
+                                <a class="linkedin" href="https://www.linkedin.com/in/pedro-henrique-spindola/">Linkedin</a>
                             </div>
                             <div class="boxgithub">
                                 <img src="assets/github.png" width="20px" alt="Logo github">
-                                <a class="github" href="#">Github</a>
+                                <a class="github" href="https://github.com/Pedro-Spindola">Github</a>
                             </div>
                         </div><!--home_text2-->
                     </div><!--home_text-->
@@ -61,7 +61,7 @@
                     <div class="sobremim">
                         <h1>SOBRE MIM</h1>
                         <h2>Goiânia - Goiás</h2>
-                        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc fringilla justo non lorem sagittis, at aliquet lorem molestie. Maecenas vestibulum ex eget justo accumsan suscipit. Maecenas sollicitudin volutpat dignissim. Suspendisse vel leo eget dolor aliquet consectetur eu eget quam. Donec finibus quam dui, id laoreet ante ornare et. Phasellus vel ligula sed lorem commodo aliquet. Sed fermentum fermentum semper. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+                        <h3>Olá, tenho 23 anos é estou em busca da minha primeira experiência oficial na área de tecnologia, sempre fui encantado na área de programação, é no inicio de 2022 inicie a graduação em engenharia de software, estou dedicado ao estudos e fazendo outros cursos para profissionalizar, pois futuramente quero me torna um desenvolvedor fullstack.</h3>
                     </div>
                 </div>
             </div>
