--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="sobremim">
                         <h1>SOBRE MIM</h1>
                         <h2>Goiânia - Goiás</h2>
-                        <h3>Olá, tenho 23 anos é estou em busca da minha primeira experiência oficial na área de tecnologia, sempre fui encantado na área de programação, é no inicio de 2022 inicie a graduação em engenharia de software, estou dedicado ao estudos e fazendo outros cursos para profissionalizar, pois futuramente quero me torna um desenvolvedor fullstack.</h3>
+                        <h3>Olá, tenho 23 anos é estou em busca da minha primeira experiência oficial na área de tecnologia, sempre fui encantado na área de programação, é no inicio de 2022 inicie a graduação em engenharia de software, estou dedicado aos estudos e fazendo outros cursos para profissionalizar, pois futuramente quero me torna um desenvolvedor fullstack.</h3>
                     </div>
                 </div>
             </div>
