Update de projeto.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <div class="texto_hab">
                             <h2>HTML</h2>
                             <p>HTML (Linguagem de Marcação de HiperTexto) é utilizada para marcação nas construções de páginas web, os documentos HTML são interpretados pelos os navegadores.</p>
-                            <p class="tp_ex">Tempo de experiencia: 04 Meses</p>
+                            <p class="tp_ex">Tempo de experiencia: 05 Meses</p>
                         </div><!--texto_hab-->
                     </div><!--box_skil-->
                     <div class="line_skil">
@@ -91,7 +91,7 @@
                         <div class="texto_hab">
                             <h2>CSS</h2>
                             <p>CSS(Cascading Style Sheets) é um mecanismo utilizado para adicionar e manipular estilos de um documento web.</p>
-                            <p class="tp_ex">Tempo de experiencia: 04 Meses</p>
+                            <p class="tp_ex">Tempo de experiencia: 05 Meses</p>
                         </div><!--texto_hab-->
                     </div><!--box_skil-->
                     <div class="line_skil">
@@ -105,7 +105,7 @@
                         <div class="texto_hab">
                             <h2>JavaScript</h2>
                             <p>JavaScript é uma linguagem de programação de alto nível, que permite você implementar itens complexos em páginas web, juntamente com HTML e CSS.</p>
-                            <p class="tp_ex">Tempo de experiencia: 03 Meses</p>
+                            <p class="tp_ex">Tempo de experiencia: 04 Meses</p>
                         </div><!--texto_hab-->
                     </div><!--box_skil-->
                 </div><!--ability-->
@@ -115,14 +115,14 @@
             <div class="center">
                 <div class="galeria">
                     <div = class="polaroid">
-                        <img src="assets/breve.png" class="wallpaper" alt="">
+                        <img src="assets/jokenpo.png" class="wallpaper" alt="">
                         <div class="inf_polaroid">
-                            <h1>Em breve</h1>
-                            <p></p>    
+                            <h1>Jokenpo</h1>
+                            <p>O projeto do jogo jokenpo, foi divertido, criado com CSS, HTML e JS puro, colocando em pratica a programação web. Nele, os jogadores terá um partida rápita e desafiadora.</p>    
                         </div><!--inf_polaroid-->
                         <div class="buttonv">
                             <img src="assets/link.png" class="icon_visu" alt="">
-                            <a href="">Visualizar</a>
+                            <a href="https://pedro-spindola.github.io/Jokenpo/">Visualizar</a>
                         </div><!--buttonv-->
                     </div><!--polaroid-->
                     <div = class="polaroid">
