--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
+<!DOCTYPE html>
 <html lang="PT-BR">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pedro Spíndola</title>
+        <!--Tag para o SEO-->
+        <meta name="description" content="Exemplo de descrição para o meu site.">
+        <meta name="keywords" content="palavras-chaves,separados,por,virgula">
+        <meta name="author" content="Pedro Spíndola">
+        <!--Tag para o SEO-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
         <link href="style.css" rel="stylesheet"/>
     </head>
@@ -10,13 +16,13 @@
         <section class="menu">
                 <div class="menu_local">
                     <div class="logo_menu">
-                        <img src="assets/logo01.png"/>
+                        <img alt="Descrição" title="Spindola_Dev" src="assets/logo01.png"/>
                     </div><!--logo_menu-->
                     <div class="itens_menu">
-                        <a href="#home">Home</a>
-                        <a href="#sobre">Sobre</a>
-                        <a href="#habilidade">Habilidade</a>
-                        <a href="#projetos">Projetos</a>
+                        <a title="Home" href="#home">Home</a>
+                        <a title="Sobre" href="#sobre">Sobre</a>
+                        <a title="Habilidades" href="#habilidade">Habilidade</a>
+                        <a title="Projetos" href="#projetos">Projetos</a>
                     </div><!--itens_menu-->
                 </div><!--menu_local-->
         </section><!--menu-->
