Update - To-do List

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <img src="assets/formulario_render.png"" class="wallpaper" alt="">
                         <div class="inf_polaroid">
                             <h1>Em breve</h1>
-                            <p></p>    
+                            <p>Este projeto foi desenvolvido para criar um formulário de contato para um site. Utilizei HTML e CSS para criar a estrutura e o estilo do formulário. Além disso, adicionei uma animação visual. </p>    
                         </div><!--inf_polaroid-->
                         <div class="buttonv">
                             <img src="assets/link.png" class="icon_visu" alt="">
@@ -143,10 +143,10 @@
                         </div><!--buttonv-->
                     </div><!--polaroid-->
                     <div = class="polaroid">
-                        <img src="assets/breve.png" class="wallpaper" alt="">
+                        <img src="assets/toList.png" class="wallpaper" alt="">
                         <div class="inf_polaroid">
-                            <h1>Em breve</h1>
-                            <p></p>    
+                            <h1>To-do List</h1>
+                            <p>Este projeto foi criado com o objetivo de desenvolver uma To-do List simples e fácil de usar. Utilizei HTML, CSS e JavaScript para a criação da interface e para a lógica da aplicação. A To-do List conta com funcionalidades básicas, como adicionar tarefas, marcar como concluídas e excluir tarefas. O maior desafio enfrentado foi implementar a função de armazenamento local, para que as tarefas fossem salvas mesmo após o fechamento do navegador. No final, fiquei satisfeito com o resultado e aprendi muito durante o processo de desenvolvimento.</p>    
                         </div><!--inf_polaroid-->
                         <div class="buttonv">
                             <img src="assets/link.png" class="icon_visu" alt="">
