Correção de Link

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         </div><!--inf_polaroid-->
                         <div class="buttonv">
                             <img src="assets/link.png" class="icon_visu" alt="">
-                            <a href="">Visualizar</a>
+                            <a href="https://pedro-spindola.github.io/formulario/">Visualizar</a>
                         </div><!--buttonv-->
                     </div><!--polaroid-->
                     <div = class="polaroid">
@@ -150,7 +150,7 @@
                         </div><!--inf_polaroid-->
                         <div class="buttonv">
                             <img src="assets/link.png" class="icon_visu" alt="">
-                            <a href="">Visualizar</a>
+                            <a href="https://pedro-spindola.github.io/to-do-list/">Visualizar</a>
                         </div><!--buttonv-->
                     </div><!--polaroid-->
                 </div><!--galeria-->
