--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
                         <img src="assets/formulario_render.png"" class="wallpaper" alt="">
                         <div class="inf_polaroid">
                             <h1>Em breve</h1>
-                            <p>Este projeto foi desenvolvido para criar um formulário de contato para um site. Utilizei HTML e CSS para criar a estrutura e o estilo do formulário. Além disso, adicionei uma animação visual. </p>    
+                            <p></p>    
                         </div><!--inf_polaroid-->
                         <div class="buttonv">
                             <img src="assets/link.png" class="icon_visu" alt="">
-                            <a href="https://pedro-spindola.github.io/formulario/">Visualizar</a>
+                            <a href="">Visualizar</a>
                         </div><!--buttonv-->
                     </div><!--polaroid-->
                     <div = class="polaroid">
